tests/unit-fail-compilation/j055e.c.ref
j055e.c:2:1: error: Signed integer overflow.
  Undefined behavior (UB-CCV1). See C11 sec. 6.5:5, J.2:1 item 36
Translation failed (config dumped). Run kcc -d j055e.c to see commands run.
